fix: render dark mode by using next-themes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,3 +32,10 @@ body {
     text-wrap: balance;
   }
 }
+
+@layer base {
+  body {
+    @apply dark:bg-gray-700
+        bg-white;
+  }
+}
